--- a/.github/workflows/BuildBranch-Windoww2022.yml
+++ b/.github/workflows/BuildBranch-Windoww2022.yml
@@ -66,13 +66,13 @@ jobs:
       - run: cmake --install  ${{ env.BUILD_DIR }} --prefix       ${{ env.INSTALL_DIR}}     --config ${{ matrix.buildConfig }}
 
   runCMake-Windows-2022:
-    name: 2022-${{ matrix.compiler }}-${{ matrix.buildConfig }}
+    name: runCMake2022-${{ matrix.compiler }}-${{ matrix.buildConfig }}
     runs-on: Windows-2022
     strategy:
       fail-fast: false
       matrix:
-        buildConfig: [debug, relwithdebinfo, release]
-        compiler:    [msvc,  msvc-clang, msvc-clang-cl]
+        buildConfig: [debug]
+        compiler:    [msvc]
     env:
         PRESET_NAME: x64-windows-${{ matrix.compiler }}-${{ matrix.buildConfig }}
         BUILD_DIR: "build/${{ matrix.compiler }}-${{ matrix.buildConfig }}"
@@ -92,9 +92,8 @@ jobs:
         uses: lukka/run-cmake@v10
         with:
           configurePreset: ${{ env.PRESET_NAME }}
-          configurePresetAdditionalArgs: "['-B ${{ env.BUILD_DIR }} -DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_COMPILE_WARNING_AS_ERROR=${{ github.event.inputs.warningsAsErrors }}']"
+          configurePresetAdditionalArgs: "['-DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake -DCMAKE_COMPILE_WARNING_AS_ERROR=${{ github.event.inputs.warningsAsErrors }}']"
 
-      #- uses: ammaraskar/msvc-problem-matcher@0.3.0
       - run: cmake --build    ${{ env.BUILD_DIR }} --config       ${{ matrix.buildConfig }}
       - run: ctest --test-dir ${{ env.BUILD_DIR }} --build-config ${{ matrix.buildConfig }} --rerun-failed --output-on-failure
       - run: cmake --install  ${{ env.BUILD_DIR }} --prefix       ${{ env.INSTALL_DIR}}     --config ${{ matrix.buildConfig }}
