--- a/.github/workflows/BuildBranch-Windoww2022.yml
+++ b/.github/workflows/BuildBranch-Windoww2022.yml
@@ -98,7 +98,23 @@ jobs:
         with:
           configurePreset: ${{ env.PRESET_NAME }}
           configurePresetAdditionalArgs: "[ '-B ${{ env.BUILD_DIR }}', '-DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake', '-DCMAKE_COMPILE_WARNING_AS_ERROR=${{ github.event.inputs.warningsAsErrors }}' ]"
+
+      - name: Dump Env cmd
+        shell: cmd
+        run: SET
+
+      # setup MSVC shell
+      - name: Set Visual Studio command line
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: amd64
+
       - run: cmake --build    ${{ env.BUILD_DIR }} --config       ${{ matrix.buildConfig }}
+
+      - name: Dump Env cmd
+        shell: cmd
+        run: SET
+
       - run: ctest --test-dir ${{ env.BUILD_DIR }} --build-config ${{ matrix.buildConfig }} --rerun-failed --output-on-failure
       - run: cmake --install  ${{ env.BUILD_DIR }} --prefix       ${{ env.INSTALL_DIR}}     --config ${{ matrix.buildConfig }}
 
