--- a/.github/workflows/BuildBranch-Windoww2022.yml
+++ b/.github/workflows/BuildBranch-Windoww2022.yml
@@ -91,10 +91,17 @@ jobs:
         shell: cmd
         run: SET
 
+      # setup MSVC shell
+      - name: Set Visual Studio command line
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: amd64
+
       - name: Run CMake consuming CMakePreset.json and run vcpkg to build packages
         uses: lukka/run-cmake@v10
-        env:
-          VCPKG_ROOT: "C:/vcpkg" # run-cmake only invoke msvc shell when VCPKG_ROOT is defined.
+        #env:
+        #  VCPKG_ROOT: "C:/vcpkg" # run-cmake only invoke msvc shell when VCPKG_ROOT is defined.
+        #
         with:
           configurePreset: ${{ env.PRESET_NAME }}
           configurePresetAdditionalArgs: "[ '-B ${{ env.BUILD_DIR }}', '-DCMAKE_TOOLCHAIN_FILE=C:/vcpkg/scripts/buildsystems/vcpkg.cmake', '-DCMAKE_COMPILE_WARNING_AS_ERROR=${{ github.event.inputs.warningsAsErrors }}', '--log-level=DEBUG' ]"
