--- a/.github/workflows/BuildBranch-Windoww2022.yml
+++ b/.github/workflows/BuildBranch-Windoww2022.yml
@@ -12,7 +12,7 @@ on:
         description: 'Build with warnings as errors'
         required: true
         type: 'boolean'
-        default: true
+        default: false
 
   pull_request:
     types:  opened
@@ -136,7 +136,7 @@ jobs:
       fail-fast: false
       matrix:
         buildConfig: [debug]
-        compiler:    [gcc14, clang18, clang19]
+        compiler:    [gcc14, clang18]
     env:
         PRESET_NAME: x64-linux-${{ matrix.compiler }}-${{ matrix.buildConfig }}
         BUILD_DIR: "build/${{ matrix.compiler }}-${{ matrix.buildConfig }}"
