--- a/.github/workflows/Branch-Build-Ubuntu.yml
+++ b/.github/workflows/Branch-Build-Ubuntu.yml
@@ -86,6 +86,8 @@ jobs:
 
       - name: run-vcpk
         uses: lukka/run-vcpkg@v11
+        with:
+            vcpkgDirectory: /usr/local/share/vcpkg
 
       #
       # cmake configure
