--- a/.github/workflows/Branch-Build-Ubuntu.yml
+++ b/.github/workflows/Branch-Build-Ubuntu.yml
@@ -88,6 +88,7 @@ jobs:
         uses: lukka/run-vcpkg@v11
         with:
             vcpkgDirectory: '${{ github.workspace }}/vcpkg_'
+            runVcpkgInstall: true
 
       #
       # cmake configure
