--- a/.github/workflows/Branch-Build-Ubuntu.yml
+++ b/.github/workflows/Branch-Build-Ubuntu.yml
@@ -152,7 +152,7 @@ jobs:
         uses: test-summary/action@v2.4
         with:
           paths: ${{env.BUILD_DIR}}/tests/result/*.xml
-          output:  ${{env.BUILD_DIR}}/ctest-test-Summary.md
+          #output:  ${{env.BUILD_DIR}}/ctest-test-Summary.md
           show: "all"
         if: always()
 
@@ -162,10 +162,11 @@ jobs:
       #
       - name:  Adding tests result to the job summary
         run: |
+            cat ${{env.BUILD_DIR}}/ctest-test-Summary.md
+
             echo "### Tests result:" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             cat "${{env.BUILD_DIR}}/ctest-test-Summary.md" >> $GITHUB_STEP_SUMMARY
-            echo "lol" >> $GITHUB_STEP_SUMMARY
         if: always()
 
       #
